{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Gameplay",
            "id": "686b177d-77da-4510-8815-8ee0038236a7",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "fe527f33-6655-49f6-bb39-55f2a46c3b88",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "9ff6d521-0e6e-4a02-9bef-767b5fdb58ab",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "f600abc6-824f-499d-bd60-7263cb37cccf",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "61812553-40e1-4d7b-9a4b-2c8b1318f961",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c1a0692-8b67-4025-a1d1-f4572b96ac68",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b2690bd-b560-4119-b3c9-f59387893c53",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}